feat: Implementacion ProfessionalRequest
Se implemento una nueva entidad para validar que los usuarios puedan solicitar ser promovidos a profesional, además se implementaron ROLES formales para los usuarios, ('PROFESSIONAL', 'ADMIN', 'USER'). Dicha validación es utilizada para  que solamente los administradores puedan revisar las peticiones y que los usuarios profesionales no puedan generar nuevas solicitudes, debido a que estos ya son profesionales.